--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.4"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
+        classpath 'com.google.gms:google-services:4.3.10'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,6 +20,12 @@ plugins {
 
 allprojects {
     apply plugin: "org.jlleitschuh.gradle.ktlint"
+
+    /*repositories {
+        // Check that you have the following line (if not, add it):
+        google()  // Google's Maven repository
+        // ...
+    }*/
 }
 
 task clean(type: Delete) {
